# One-sentence-game-generation

./: .gitignore  README.md  app.py  config.py  game_generators.py  game_manager.py  game_statem_api.md  game_types.py  pyproject.toml  state_schema.py
frontend/: index.html  script.js  style.css
game_statics/: intern_map.py  preset_games.py
narrative/: __init__.py  engine.py  events.py  genre_presets.py  prompt_builder.py  rules.py  state_models.py
scripts/: excel_to_prompt_format.py  game_scripts.xlsx  game_statem_run.sh  install.sh
src/api/: app.py  config.py
src/api/endpoints/: __init__.py
src/api/endpoints/game_manage/: __init__.py  router.py  schemas.py
utils/: log_config.py  redis_cache.py  util.py
